--- a/src/app/components/admin-administration/editor/editor.component.html
+++ b/src/app/components/admin-administration/editor/editor.component.html
@@ -17,7 +17,7 @@
       <!-- Formulaire pour ajouter/modifier un auteur -->
       <form (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="editor-form" [formGroup]="editorForm">
         <div class="form-group mt-4">
-          <label for="name">Nom</label>
+          <label for="name">Nom<span class="text-danger">*</span></label>
           <input [ngClass]="{'is-invalid':submitted && editorForm.get('name')?.invalid}" type="text" class="form-control" id="name" name="name" formControlName="name" required>
           <div *ngIf="submitted && editorForm.get('name')?.errors?.['required']" class="text-danger">
             Le nom de l'éditeur est obligatoire.
