--- a/src/app/components/admin-administration/type/type.component.html
+++ b/src/app/components/admin-administration/type/type.component.html
@@ -17,7 +17,7 @@
       <!-- Formulaire pour ajouter/modifier un auteur -->
       <form (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="type-form" [formGroup]="typeForm">
         <div class="form-group mt-4">
-          <label for="typeName">Genre</label>
+          <label for="typeName">Genre<span class="text-danger">*</span></label>
           <input [ngClass]="{'is-invalid':submitted && typeForm.get('typeName')?.invalid}" type="text" class="form-control" id="typeName" name="typeName" formControlName="typeName" required>
           <div *ngIf="submitted && typeForm.get('typeName')?.errors?.['required']" class="text-danger">
             La saisie du genre est obligatoire.
