--- a/src/app/components/payment-page/payment-page.component.html
+++ b/src/app/components/payment-page/payment-page.component.html
@@ -1,33 +1,28 @@
 <main id="content" role="main">
   <div class="container text-center content-space-4 mt-lg-8">
-
-      <div class="col-lg-4 mx-auto">
-        <app-alert *ngIf="success" message={{message}} color="alert-primary"></app-alert>
+    <div class="col-lg-4 mx-auto">
+      <app-alert *ngIf="success" message={{message}} color="alert-primary"></app-alert>
       <div class="card">
         <div class="card-header">
           <h4 class="card-header-title">Récapitulatif</h4>
         </div>
-        <div class="table-responsive">
-          <table class="table table-nowrap table-align-middle">
-            <tbody>
-            <tr>
-              <td>Frais de livraison</td>
-              <td class="text-end">offert</td>
-            </tr>
-            <tr>
-              <td>Montant HT</td>
-              <td class="text-end">{{ totalExcludingTaxes | number:'.2' }} €</td>
-            </tr>
-            <tr>
-              <td>TVA</td>
-              <td class="text-end">{{ taxes | number:'.2' }} €</td>
-            </tr>
-            <tr>
-              <td>Montant TTC</td>
-              <td class="text-end">{{ totalIncludingTaxes | number:'.2' }} €</td>
-            </tr>
-            </tbody>
-          </table>
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <p><strong>Frais de livraison :</strong></p>
+            <p>offert</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p><strong>Montant HT :</strong></p>
+            <p>{{ totalExcludingTaxes | number:'.2' }} €</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p><strong>TVA :</strong></p>
+            <p>{{ taxes | number:'.2' }} €</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p><strong>Montant TTC :</strong></p>
+            <p>{{ totalIncludingTaxes | number:'.2' }} €</p>
+          </div>
         </div>
       </div>
       <!-- Button trigger modal -->
@@ -35,6 +30,6 @@
         Payer *
       </button>
       <p class="mt-3">* Cette fonctionnalité sera ajouté par l'équipe M2i</p>
-      </div>
     </div>
+  </div>
 </main>
